--- a/Zfolder/logintest/index.html
+++ b/Zfolder/logintest/index.html
@@ -37,7 +37,7 @@
         <div id="map"></div>
     </div>
 
-    <!-- Modal for Adding/Editing Pins -->
+    <!-- Modal for Adding/Editing Pins 
     <div class="modal fade" id="pinModal" tabindex="-1" aria-labelledby="pinModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -69,7 +69,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
 
 </body>
 </html>
