--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <li class="nav-item"><a class="nav-link" href="items.html">Items</a></li>
                         <li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
                         <li class="nav-item"><a class="nav-link" href="user/userlogin.html">User</a></li>
-                        <li class="nav-item"><a class="nav-link" href="register.php">User</a></li>
+                        <li class="nav-item"><a class="nav-link" href="register.php">Register</a></li>
                     </ul>
                 </div>
             </div>
