--- a/Zfolder/logintest/index.html
+++ b/Zfolder/logintest/index.html
@@ -1,75 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Map with Editable Pins</title>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>WebGL Earth Example</title>
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+      }
+      #earth_div {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="earth_div"></div>
+    <!-- Load WebGL Earth API -->
+    <script src="https://www.webglearth.com/v2/api.js"></script>
+    <script>
+      // Create the globe in the 'earth_div' element
+      var earth = new WE.map('earth_div');
+      // Set initial view with [latitude, longitude] and a zoom level
+      earth.setView([0, 0], 2);
+      
+      // Add a tile layer using OpenStreetMap tiles
+      WE.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '© OpenStreetMap contributors',
+        subdomains: 'abc'
+      }).addTo(earth);
 
-    <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-
-    <!-- Bootstrap CSS (For modal styling) -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
-
-</head>
-<body>
-    <div id="map-container">
-        <h1>Spot On</h1>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">Spot On</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="pins.html">Pins</a></li>
-                        <li class="nav-item"><a class="nav-link" href="songs.html">Songs</a></li>
-                        <li class="nav-item"><a class="nav-link" href="items.html">Items</a></li>
-                        <li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
-                        <li class="nav-item"><a class="nav-link" href="user.html">User</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <p>Click on the map to add a pin. Edit pins to include descriptions or song links.</p>
-        <div id="map"></div>
-    </div>
-
-    <!-- Modal for Adding/Editing Pins 
-    <div class="modal fade" id="pinModal" tabindex="-1" aria-labelledby="pinModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="pinModalLabel">Pin Details</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="pinForm">
-                        <div class="mb-3">
-                            <label for="pinTitle" class="form-label">Title</label>
-                            <input type="text" class="form-control" id="pinTitle" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="pinDescription" class="form-label">Description</label>
-                            <textarea class="form-control" id="pinDescription" rows="3" required></textarea>
-                        </div>
-                        <div class="mb-3">
-                            <label for="pinSong" class="form-label">Song Link (Optional)</label>
-                            <input type="url" class="form-control" id="pinSong" placeholder="https://example.com">
-                        </div>
-                        <input type="hidden" id="pinLat">
-                        <input type="hidden" id="pinLng">
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" id="savePinBtn" class="btn btn-primary">Save Pin</button>
-                </div>
-            </div>
-        </div>
-    </div>-->
-
-</body>
+      // Optionally, add a marker to test interactivity
+      var marker = WE.marker([0, 0]).addTo(earth);
+      marker.bindPopup("Hello, World!").openPopup();
+    </script>
+  </body>
 </html>
