--- a/admin/index.html
+++ b/admin/index.html
@@ -1,83 +1,307 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Map with Editable Pins</title>
-
-    <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-
-    <!-- Bootstrap CSS (For modal styling) -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/styles.css">
+  <meta charset="utf-8">
+  <title>Interactive Map with Editable Pins</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+    #bgvideo {
+      position: fixed;
+      top: 0;
+      left: 0;
+      min-width: 100%;
+      min-height: 100%;
+      z-index: -2;
+      object-fit: cover;
+    }
+    /* Globe fills the background */
+    #earth_div {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+    }
+    /* Offcanvas toggle button */
+    #offcanvasToggle {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      z-index: 20;
+    }
+  </style>
 </head>
 <body>
-    <div id="map-container">
-        <h1>Spot On</h1>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">Spot On</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="index.php">Home</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="pins.php">Pins</a></li>
-                        <li class="nav-item"><a class="nav-link" href="songs.php">Songs</a></li>
-                        <li class="nav-item"><a class="nav-link" href="items.php">Items</a></li>
-                        <li class="nav-item"><a class="nav-link" href="events.php">Events</a></li>
-                        <!--<li class="nav-item"><a class="nav-link" href="user/userlogin.php">User</a></li>
-                        <li class="nav-item"><a class="nav-link" href="register.php">User</a></li>-->
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <p>Create an account or login to start your journey</p>
-        <div id="map"></div>
-    </div>
+  <!-- Video Background (local file) -->
+  <video autoplay muted loop id="bgvideo">
+    <source src="stars.mp4" type="video/mp4">
+  </video>
+  <!-- Globe Background -->
+  <div id="earth_div"></div>
 
-    <!-- Modal for Adding/Editing Pins -->
-    <div class="modal fade" id="pinModal" tabindex="-1" aria-labelledby="pinModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="pinModalLabel">Pin Details</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="pinForm">
-                        <div class="mb-3">
-                            <label for="pinTitle" class="form-label">Title</label>
-                            <input type="text" class="form-control" id="pinTitle" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="pinDescription" class="form-label">Description</label>
-                            <textarea class="form-control" id="pinDescription" rows="3" required></textarea>
-                        </div>
-                        <div class="mb-3">
-                            <label for="pinSong" class="form-label">Song Link (Optional)</label>
-                            <input type="url" class="form-control" id="pinSong" placeholder="https://example.com">
-                        </div>
-                        <input type="hidden" id="pinLat">
-                        <input type="hidden" id="pinLng">
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" id="savePinBtn" class="btn btn-primary">Save Pin</button>
-                </div>
-            </div>
+  <!-- Offcanvas Toggle Button (Hamburger Icon) -->
+  <button class="btn btn-primary" type="button" id="offcanvasToggle" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <!-- Offcanvas Sidebar for Navigation, Search, and Manual Pin Addition -->
+  <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Spot On</h5>
+      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <!-- Navigation -->
+      <nav class="navbar mb-4">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link active" href="pins.html">Pins</a></li>
+          <li class="nav-item"><a class="nav-link" href="songs.html">Songs</a></li>
+          <li class="nav-item"><a class="nav-link" href="items.html">Items</a></li>
+          <li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
+        </ul>
+      </nav>
+      <p>Create an account or login to start your journey</p>
+
+      <!-- Search Pins Section -->
+      <div class="mb-4">
+        <h6>Search Pins</h6>
+        <form id="searchForm">
+          <div class="mb-3">
+            <input type="text" class="form-control" id="searchInput" placeholder="Search by title or description">
+          </div>
+          <button type="submit" class="btn btn-primary">Search</button>
+        </form>
+        <div id="searchResults" class="mt-3"></div>
+      </div>
+
+      <!-- Manual Add Pin Form -->
+      <h6>Add a New Pin</h6>
+      <form id="pinForm">
+        <div class="mb-3">
+          <label for="latitude" class="form-label">Latitude</label>
+          <input type="number" step="any" class="form-control" id="latitude" placeholder="e.g., 37.7749" required>
         </div>
+        <div class="mb-3">
+          <label for="longitude" class="form-label">Longitude</label>
+          <input type="number" step="any" class="form-control" id="longitude" placeholder="e.g., -122.4194" required>
+        </div>
+        <div class="mb-3">
+          <label for="description" class="form-label">Description</label>
+          <input type="text" class="form-control" id="description" placeholder="Pin description" required>
+        </div>
+        <button type="submit" class="btn btn-success">Add Pin</button>
+      </form>
     </div>
-    <!-- Leaflet JS -->
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <!-- Bootstrap JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-    <!-- Custom JS -->
-    <script src="js/map.js"></script>
+  </div>
 
+  <!-- Merged Modal for Adding/Editing Pins -->
+  <div class="modal fade" id="pinModal" tabindex="-1" aria-labelledby="pinModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="pinModalLabel">Pin Details</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <!-- Using the same form id to preserve existing JS integration -->
+          <form id="modalPinForm">
+            <!-- New Title Field -->
+            <div class="mb-3">
+              <label for="pinTitle" class="form-label">Title</label>
+              <input type="text" class="form-control" id="pinTitle" required>
+            </div>
+            <!-- Updated Description Field as Textarea -->
+            <div class="mb-3">
+              <label for="pinDescription" class="form-label">Description</label>
+              <textarea class="form-control" id="pinDescription" rows="3" required></textarea>
+            </div>
+            <!-- New Song Link Field -->
+            <div class="mb-3">
+              <label for="pinSong" class="form-label">Song Link (Optional)</label>
+              <input type="url" class="form-control" id="pinSong" placeholder="https://example.com">
+            </div>
+            <!-- Latitude and Longitude Fields (Readonly) -->
+            <div class="mb-3">
+              <label for="modalLatitude" class="form-label">Latitude</label>
+              <input type="number" step="any" class="form-control" id="modalLatitude" readonly>
+            </div>
+            <div class="mb-3">
+              <label for="modalLongitude" class="form-label">Longitude</label>
+              <input type="number" step="any" class="form-control" id="modalLongitude" readonly>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" id="savePinBtn" class="btn btn-primary">Save Pin</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Load WebGL Earth API -->
+  <script src="https://www.webglearth.com/v2/api.js"></script>
+  <!-- Bootstrap JS Bundle (includes Popper) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    // Initialize the globe
+    var earth = new WE.map('earth_div');
+    earth.setView([0, 0], 2);
+    WE.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: '© OpenStreetMap contributors',
+      subdomains: 'abc'
+    }).addTo(earth);
+
+    // Global array to store markers for deletion
+    var markers = [];
+
+    // Helper to generate unique IDs for pins
+    function generateId() {
+      return 'pin-' + Date.now() + '-' + Math.floor(Math.random() * 1000);
+    }
+
+    // Updated function to add a pin with a unique ID and a delete button in its popup
+    function addPin(lat, lng, title, description, song, id) {
+      if (!id) {
+        id = generateId();
+      }
+      var marker = WE.marker([lat, lng]).addTo(earth);
+      marker.pinId = id;
+      markers.push(marker);
+      var popupContent = "<strong>" + title + "</strong><br>" + description;
+      if (song) {
+        popupContent += "<br><a href='" + song + "' target='_blank'>Song Link</a>";
+      }
+      popupContent += "<br><button class='btn btn-sm btn-danger' onclick=\"deletePin('" + id + "')\">Delete Pin</button>";
+      marker.bindPopup(popupContent);
+      return id;
+    }
+
+    // Save the pin along with its unique ID in localStorage
+    function savePin(lat, lng, title, description, song, id) {
+      var pins = JSON.parse(localStorage.getItem('pins')) || [];
+      pins.push({ id: id, lat: lat, lng: lng, title: title, description: description, song: song });
+      localStorage.setItem('pins', JSON.stringify(pins));
+    }
+
+    // Load saved pins and add them to the map (and the markers array)
+    function loadPins() {
+      var pins = JSON.parse(localStorage.getItem('pins')) || [];
+      pins.forEach(function(pin) {
+        addPin(pin.lat, pin.lng, pin.title || "Untitled", pin.description, pin.song, pin.id);
+      });
+    }
+
+    // Delete a pin from both localStorage and the map
+    function deletePin(id) {
+      // Remove pin from localStorage
+      var pins = JSON.parse(localStorage.getItem('pins')) || [];
+      var newPins = pins.filter(function(pin) {
+        return pin.id !== id;
+      });
+      localStorage.setItem('pins', JSON.stringify(newPins));
+
+      // Remove marker from map and update markers array
+      markers = markers.filter(function(marker) {
+        if (marker.pinId === id) {
+          earth.removeLayer(marker);
+          return false;
+        }
+        return true;
+      });
+    }
+
+    // Load saved pins on page load
+    loadPins();
+
+    // Handle manual add pin form submission (from sidebar)
+    document.getElementById('pinForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      var lat = parseFloat(document.getElementById('latitude').value);
+      var lng = parseFloat(document.getElementById('longitude').value);
+      var description = document.getElementById('description').value;
+      // For manual add, set title as 'Untitled' and no song link
+      var id = addPin(lat, lng, "Untitled", description, "");
+      savePin(lat, lng, "Untitled", description, "", id);
+      e.target.reset();
+    });
+
+    // Handle modal pin form submission (from map click) with extended fields
+    document.getElementById('modalPinForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      var lat = parseFloat(document.getElementById('modalLatitude').value);
+      var lng = parseFloat(document.getElementById('modalLongitude').value);
+      var title = document.getElementById('pinTitle').value;
+      var description = document.getElementById('pinDescription').value;
+      var song = document.getElementById('pinSong').value;
+      var id = addPin(lat, lng, title, description, song);
+      savePin(lat, lng, title, description, song, id);
+      // Hide the modal after submission
+      var modalEl = document.getElementById('pinModal');
+      var modal = bootstrap.Modal.getInstance(modalEl);
+      modal.hide();
+      e.target.reset();
+    });
+
+    // Bind click event to save button in modal as well
+    document.getElementById('savePinBtn').addEventListener('click', function() {
+      document.getElementById('modalPinForm').dispatchEvent(new Event('submit', {cancelable: true}));
+    });
+
+    // Add search functionality for pins (searching in title and description)
+    document.getElementById('searchForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      var query = document.getElementById('searchInput').value.toLowerCase();
+      var pins = JSON.parse(localStorage.getItem('pins')) || [];
+      var resultsDiv = document.getElementById('searchResults');
+      resultsDiv.innerHTML = '';
+      var results = pins.filter(function(pin) {
+        return (pin.description && pin.description.toLowerCase().includes(query)) ||
+               (pin.title && pin.title.toLowerCase().includes(query));
+      });
+      if (results.length === 0) {
+        resultsDiv.innerHTML = '<p>No matching pins found.</p>';
+      } else {
+        var ul = document.createElement('ul');
+        ul.classList.add('list-group');
+        results.forEach(function(pin) {
+          var li = document.createElement('li');
+          li.classList.add('list-group-item');
+          li.style.cursor = 'pointer';
+          li.textContent = (pin.title || "Untitled") + ' - ' + pin.description + ' (' + pin.lat + ', ' + pin.lng + ')';
+          li.addEventListener('click', function() {
+            earth.setView([pin.lat, pin.lng], 4);
+          });
+          ul.appendChild(li);
+        });
+        resultsDiv.appendChild(ul);
+      }
+    });
+
+    // Enable map click to invoke modal for adding a pin with extended fields
+    earth.on('click', function(event) {
+      if (event && event.latlng) {
+        document.getElementById('modalLatitude').value = event.latlng.lat;
+        document.getElementById('modalLongitude').value = event.latlng.lng;
+        // Reset additional fields in the modal
+        document.getElementById('pinTitle').value = "";
+        document.getElementById('pinDescription').value = "";
+        document.getElementById('pinSong').value = "";
+        // Show the modal
+        var pinModal = new bootstrap.Modal(document.getElementById('pinModal'));
+        pinModal.show();
+      }
+    });
+  </script>
 </body>
 </html>
